data-xfer/main/default/objects/Field_Mapping__c/Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Field Mapping</label>
    <nameField>
        <label>Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>