data-xfer/main/default/objects/Field_Mapping__c/fields/External_Field__c.field-meta.xml
<CustomField>
    <fullName>External_Field__c</fullName>
    <label>External Field</label>
    <length>22</length>
    <required>true</required>
    <type>Text</type>
</CustomField>