data-xfer/main/default/objects/Field_Mapping__c/fields/Field_Mapping_Set__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping_Set__c</fullName>
    <label>Field Mapping Set</label>
    <referenceTo>Field_Mapping_Set__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>