data-xfer/main/default/objects/Field_Mapping__c/fields/Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field__c</fullName>
    <label>Salesforce Field</label>
    <length>45</length>
    <required>true</required>
    <type>Text</type>
</CustomField>